--- a/app/src/main/res/layout-v26/activity_main.xml
+++ b/app/src/main/res/layout-v26/activity_main.xml
@@ -17,11 +17,19 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tabs" />
 
+    <Button
+        android:id="@+id/show_all"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/show_all"
+        android:layout_below="@id/search_bar"
+        android:visibility="gone"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/search_bar" />
+        android:layout_below="@id/show_all" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/new_photo_button"
