--- a/app/src/main/res/layout-v26/activity_main.xml
+++ b/app/src/main/res/layout-v26/activity_main.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:text="@string/show_all"
         android:layout_below="@id/search_bar"
+        android:layout_centerHorizontal="true"
         android:visibility="gone"/>
 
     <android.support.v4.view.ViewPager
